--- a/app/templates/app/inicio.html
+++ b/app/templates/app/inicio.html
@@ -25,8 +25,8 @@
 
 <!--Base-->
     <div class='bg-white bg-opacity-50 overflow-scroll' style='z-index: 1;
-    -webkit-backdrop-filter: blur(60px);
     height: 100vh;
+    -webkit-backdrop-filter: blur(60px);
     backdrop-filter: blur(60px);'>
 
     <div>
@@ -112,7 +112,7 @@
         <!--Menu-->
         <div class="d-flex align-items-start overflow-hidden " style='z-index: 1;'>
     
-            <div class="nav flex-column nav-pills ms-3   me-3  d-flex align-content-center justify-content-center flex-wrap overflow-hidden"style='min-height: 15rem; border-radius:1rem; min-width: 7rem; max-width: 7rem; z-index: 1;'  id="v-pills-tab" role="tablist" aria-orientation="vertical">
+            <div class="nav flex-column nav-pills ms-1 d-none me-1  d-flex align-content-center justify-content-center flex-wrap overflow-hidden"style='min-height: 15rem; border-radius:1rem; min-width: 7rem; max-width: 7rem; z-index: 1;'  id="v-pills-tab" role="tablist" aria-orientation="vertical">
 
               <div class='d-flex justify-content-center' style='z-index: 1;'>
                 <h6 class='Audiowide'>
@@ -201,31 +201,159 @@
  
 
             <!--SFS-->
-            <div class=' ' >
+            <div class=' m-auto  ' style='border-radius:1rem;' >
               
 
 
-                  <div class="tab-content  " style='
-                  height: 85vh;
+                  <div class="tab-content   " style='
+                  height: 87vh;
                   border-radius:1.5rem;
                   ' id="v-pills-tabContent">
 
               
 
-                    <div class="tab-pane fade show active position-relative" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
+                    <div class="tab-pane fade  show active   overflow-hidden position-relative"
+                     style='background:url({{perfil.photo.url}}) ;
+                     background-size:cover;
+                     width: 370px; height: 540px; border-radius:1.5rem;'  id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
 
-                      <div style='max-width: 50rem;'>
-                        Yo tengo un flow cabron, la app aun no esta lista pero esta 😘 mamacita, asi que paciencia mis queridos, les informo que estare creando apps para todo tipo de cosas con los diseños mas hijo de putas que puedo crear, <strong class='Audiowide'>Los Dioses</strong>
-                        <ul class=''>
-                          <h6 class='Audiowide'>
-                            Apps planeadas
-                          </h6>
-                          <li class='Audiowide'>App Musica</li>
-                          <li class='Audiowide'>App Notas</li>
-                          <li class='Audiowide'>App Fotos</li>
-                        </ul>
-                
-                      </div>
+                      <!--Letras-->
+                      <div class='bg-black d-none w-100 h-100  d-flex justify-content-center flex-wrap overflow-scroll pt-4 bg-black bg-opacity-50  ' style='
+                      -webkit-backdrop-filter: blur(50px);
+                      backdrop-filter: blur(50px); ' >
+
+                        <div style='height: 0.1rem;'>
+
+                        </div>
+                        {% for p in  photos %}
+                        <hr class='bg-white w-100 bg-opacity-50'>
+                      <div class='w-100 ms-1 me-1 bg-transparent  ps-3  ' style='height: 2rem;
+                      border-radius:1rem;'>
+                        <div class='d-flex w-100   flex-wrap'>
+
+                          <div class='w-10 pt-2'>
+                            <img src="{{perfil.photo.url}}"  class='rounded-circle' width='25' height='25' alt="">
+                          </div>
+
+                          <!--NAme-->
+                          <div class=' d-flex  w-50 '>
+                              <div class='w-50 '>
+                                <h6 class='Audiowide  ms-2 text-white'>
+                                  Unaccomanting 
+                                  <p class='text-white w-100'>
+                                    Eminem
+                                  </p>
+                                </h6>
+                              </div>
+
+             
+                          </div>
+                          <div class='w-25  position-absolute me-1 mt-2 pe-3 end-0   d-flex justify-content-end'>
+
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill me-3 text-white-50  " viewBox="0 0 16 16">
+                              <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                            </svg>
+
+                            <svg xmlns="http://www.w3.org/2000/svg" width="19" height="19" fill="currentColor" class="bi bi-music-note-list text-white-50 " viewBox="0 0 16 16">
+                              <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2z"/>
+                              <path fill-rule="evenodd" d="M12 3v10h-1V3h1z"/>
+                              <path d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1V2.82z"/>
+                              <path fill-rule="evenodd" d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5z"/>
+                            </svg>
+                          </div>
+                          <!--NAme-->
+                            </div>
+                          </div>
+                          {% endfor %}
+                        </div>
+
+
+                      <!--HOme deMusic-->
+                        <section class='w-100 h-100' style='  
+                          -webkit-backdrop-filter: blur(60px);
+                        backdrop-filter: blur(60px);'>
+
+
+
+                        <!--biblioteca-->
+
+
+                        <!--Navegacion-->
+                          <div class=' position-sticky top-100 position-relative pb-2 pt-2 d-flex justify-content-center  w-100 ' >
+
+                            <!--1-->
+                            <button class='bg-transparent border-0 ms-5 ps-5 position-absolute start-0 '>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-stars text-white" viewBox="0 0 16 16">
+                                <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828l.645-1.937zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.734 1.734 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.734 1.734 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.734 1.734 0 0 0 3.407 2.31l.387-1.162zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L10.863.1z"/>
+                              </svg>
+                            </button>
+                            <!--2-->
+                            <button class='bg-transparent border-0'>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-music-note text-white" viewBox="0 0 16 16">
+                                <path d="M9 13c0 1.105-1.12 2-2.5 2S4 14.105 4 13s1.12-2 2.5-2 2.5.895 2.5 2z"/>
+                                <path fill-rule="evenodd" d="M9 3v10H8V3h1z"/>
+                                <path d="M8 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 13 2.22V4L8 5V2.82z"/>
+                              </svg>
+                            </button>
+                            <!--3-->
+                            <button class='bg-transparent border-0 position-absolute end-0 me-5 pe-5'>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-music-note-list text-white" viewBox="0 0 16 16">
+                                <path d="M12 13c0 1.105-1.12 2-2.5 2S7 14.105 7 13s1.12-2 2.5-2 2.5.895 2.5 2z"/>
+                                <path fill-rule="evenodd" d="M12 3v10h-1V3h1z"/>
+                                <path d="M11 2.82a1 1 0 0 1 .804-.98l3-.6A1 1 0 0 1 16 2.22V4l-5 1V2.82z"/>
+                                <path fill-rule="evenodd" d="M0 11.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 .5 7H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 .5 3H8a.5.5 0 0 1 0 1H.5a.5.5 0 0 1-.5-.5z"/>
+                              </svg>
+                            </button>
+                          </div>
+                        </section>
+                        
+
+                     <!--Cuerpo de musica-->
+                      <section class='pt-2 d-none  bg-white bg-opacity-25' style='width: 100%;
+                       height: 100%;
+                      -webkit-backdrop-filter: blur(20px);
+                      backdrop-filter: blur(20px);'>
+
+
+                      <!--Photo de musi-->
+                        <div style='' class='w-100 '>
+                          <div class='w-100 d-flex justify-content-center '>
+                            <img src='{{perfil.photo.url}}' width='357' height='400' 
+                              style='border-radius:1.5rem;'
+                            alt="">
+                            
+                          </div>
+
+   
+                          <div class="progress bg-transparent mt-2 me-2 ms-2" style='height: 1rem;
+                          -webkit-backdrop-filter: blur(20px);
+                          border-radius:1rem;
+                          max-height:6px ;
+                          backdrop-filter: blur(20px);'>
+                            <div class="progress-bar bg-gradient bg-danger "  role="progressbar" style="width: 15%; " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                          </div>
+
+            
+                          <!--@-->
+                          <div class='w-100 d-flex flex-wrap justify-content-center ms-3  mt-1'>
+                              <h6 class='Audiowide w-100 text-center  ' style='font-size:1.3rem;'>
+                                Not Afraid
+                                <p style='font-size:1rem;' class='Audiowide text-black-50'>
+                                  Eminem
+                                </p>
+                              </h6>
+                            </div>
+                          
+  
+                            <!--#$-->
+                            <div class='p-2 w-100  d-flex justify-content-end'>
+                              <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-stars me-1" viewBox="0 0 16 16">
+                                <path d="M7.657 6.247c.11-.33.576-.33.686 0l.645 1.937a2.89 2.89 0 0 0 1.829 1.828l1.936.645c.33.11.33.576 0 .686l-1.937.645a2.89 2.89 0 0 0-1.828 1.829l-.645 1.936a.361.361 0 0 1-.686 0l-.645-1.937a2.89 2.89 0 0 0-1.828-1.828l-1.937-.645a.361.361 0 0 1 0-.686l1.937-.645a2.89 2.89 0 0 0 1.828-1.828l.645-1.937zM3.794 1.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387A1.734 1.734 0 0 0 4.593 5.69l-.387 1.162a.217.217 0 0 1-.412 0L3.407 5.69A1.734 1.734 0 0 0 2.31 4.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387A1.734 1.734 0 0 0 3.407 2.31l.387-1.162zM10.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732L9.1 2.137a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L10.863.1z"/>
+                              </svg>
+                            </div>
+                        </div>
+                      </section>
+
                     </div>
 
                     <div class="tab-pane fade w-100  position-relative   overflow-auto  h-100" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" style='::-webkit-scrollbar:
@@ -255,7 +383,7 @@
                       <div class='d-flex flex-wrap  overflow-hidden'>
                         
                       {% for note in note %}
-                      <div class="card me-1 mb-2  border-0 overflow-scroll" style="width: 18rem;
+                      <div class="card me-1 mb-2  border-0 overflow-scroll" style="width: 16rem;
                        height: 20rem;
                        background-color:{{note.color}};
                         border-radius:1rem;">
